  - basic support for the contest "DMSt" (#2208)
* tasks
  - add task start countdown (#136, #1080)
  - optimise racing tasks for minimum distance
* devices
  - LX: support flight download from LXNAV Nano (#2085)
  - Android/IOIO: support BMP085 sensor (DroidSoar V2)
  - Android/IOIO: support MS5611 pressure sensor
  - added driver for Levil AHRS device
* user interface
  - preselect first item with details in map item list for
    faster access (#2069, #2207)
  - non-modal FLARM radar (with InfoBoxes and menu)
  - show FAI triangle sectors in task manager
  - can drag modal dialogs
  - short click opens InfoBox dialog
  - support keyboard input on desktop computer
  - improved angle input (e.g. wind direction, sector radials)
  - faster map initialisation during startup
* infoboxes
  - added thermal assistant infobox
* track friends via internet connection (SkyLines live tracking)

Version 6.4.5 - not yet released
* user interface
  - faster gesture drawing
  - fix crash in InfoBox page setup (#2122)
* map
  - fix crash in terrain renderer with broken map file (#2478)
* data files
  - added "LAK-12" polar

Version 6.4.4 - 2012/11/15
* devices
  - CAI302: longer timeout for "CLEAR LOG"
* user interface
  - fix font preview in configuration dialog
  - fix the Escape key on Altair
  - fix wind InfoBox dialog layout (#2192)
  - add missing "Switch InfoBox" button (#2246)
* Android
  - fix text rendering on some PowerVR GPUs
* Windows
  - fix garbled screen area in task manager (#2272)

Version 6.4.3 - 2012/11/01
* devices
  - fix freeze bug on device reconnect
  - LXNAV Nano: fix crash in Nano configuration dialog
  - LXNAV V7: fix NMEA setup over Bluetooth
  - Colibri/LX20: fix LXN/FIL to IGC conversion (#2262)
* user interface
  - fix the download manager on Samsung phones

Version 6.4.2 - 2012/10/17
* calculations
  - contest: relax altitude difference check (#2348)
  - improve take-off and landing detection (#2391)
* devices