@@ -18,6 +18,8 @@ Version 6.5 - not yet released
   - Android/IOIO: support BMP085 sensor (DroidSoar V2)
   - Android/IOIO: support MS5611 pressure sensor
   - added driver for Levil AHRS device
+* logger
+  - auto-flush IGC logger after every fix
 * user interface
   - preselect first item with details in map item list for
     faster access (#2069, #2207)
